--- a/style.css
+++ b/style.css
@@ -1,1 +1,26 @@
-/* Start coding here */
+* {
+  margin: 0;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+
+.container {
+  background-color: lightgrey;
+  height: 100vh;
+  padding: 50px;
+}
+
+.box-1 {
+  background-color: orange;
+  height: 25%;
+}
+
+.box-2 {
+  background-color: khaki;
+  height: 25%;
+}
+
+.box-3 {
+  background-color: cornflowerblue;
+  height: 50%;
+}
